src/main/java/com/example/ecommerce/error/ErrorResult.java
package com.example.ecommerce.error;

public class ErrorResult  extends Result{
    public ErrorResult(String message) {
        super(false, message);
    }

}
